# pi-day-2023-with-py

./: README.md  create.venv  create_venv  pyproject.toml
play_pi/: __main__.py
play_pi/palletes/: __init__.py  notes.py
play_pi/pallettes/: __init__.py  notes.py
play_pi/phrases/: VIHART.md  __init__.py  klmcw.py  phrase.py  select_strategy.py  test_select_strategy.py  test_vihart.py  vihart.py
play_pi/utils/: log.py  scamp_driver.py  test_pi_digits.py
